# Minera-o---Trabalho-Final

./: README.md  anomalias.py  pyproject.toml  requirements.txt  run.sh
src/: load_dataset.py  main.py
